Created Scryfall fetch command
Began implementation of the Fetch Dual subcommand:
- Added libcurl dependency (HTTP Requests).
- Configured libcurl dependencies (TODO fix libpsl).
- Added simdjson dependency (JSON Parsing).
- Added progress bar infrastructure.
- Added scryfall and database skeleton structures.
Changes in main_menu.cpp:
- Indexing error causing incorrect return value fixed
- Same error causing incorrect subcommand name display fixed
- Added a selection button to the main menu.
- Added an exit button instead of an exit option, because "exit" isn't really a subcommand for the user, plus it makes it easier to navigate to.

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -1,6 +1,8 @@
 include(FetchContent)
 
-set(FETCHCONTENT_UPDATES_DISCONNECTED ON)
+set(FETCHCONTENT_UPDATES_DISCONNECTED OFF)
 set(FETCHCONTENT_QUIET OFF)
 
 add_subdirectory(ftxui)
+add_subdirectory(curl)
+add_subdirectory(simdjson)
